More Scala3 (and Spark) changes. Spark is generally not compatible with Java 18